--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
+    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.0",
     "express": "^4.16.4",
-    "socket.io": "^2.5.0"
+    "socket.io": "^2.5.0",
+    "webpack": "^5.76.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "webpack-cli": "^5.0.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sahil-eng-eng/Chat-app-socket.io.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/sahil-eng-eng/Chat-app-socket.io/issues"
+  },
+  "homepage": "https://github.com/sahil-eng-eng/Chat-app-socket.io#readme",
   "description": ""
 }
